--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+   <style type="text/css">
+   h1{
+       position: absolute;
+       top: 50%;
+       width: 100%;
+       text-align: center;
+       font-family: serif;
+   }
+
+   </style>
     <h1>hello</h1>
 </body>
 </html>
