--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
    <style type="text/css">
+   body{
+       background-color: black;
+       color: beige;
+   }
    h1{
        position: absolute;
        top: 50%;
